--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/JTRiRacing/" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/index.html" class="navbar__links">
                         Home
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/services.html" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/services.html" class="navbar__links">
                         Coaching Services
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/about.html" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/about.html" class="navbar__links">
                         About
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/signup.html" class="button">
+                    <a href="https://johnreed25.github.io/JTRiRacing/signup.html" class="button">
                         Sign Up
                     </a>
                 </li>
