--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+            <a href="https://johnreed25.github.io/JTRiRacing/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -83,15 +83,15 @@
         <div class="footer__link--wrapper">
             <div class="footer__link--items">
                 <h2>About Us</h2>
-                <a href="/services.html">Services and Prices</a>
-                <a href="/about.html">Coach Bio</a>
-                <a href="/">Terms of Service</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/services.html">Services and Prices</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/about.html">Coach Bio</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/">Terms of Service</a>
             </div>
             <div class="footer__link--items">
                 <h2>Contact Us</h2>
-                <a href="/signup.html">Contact</a>
-                <a href="/signup.html">Support</a>
-                <a href="/signup.html">Sponsorships</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Contact</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Support</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Sponsorships</a>
             </div>
 
         </div>
@@ -117,7 +117,7 @@
     <div class="social__media">
         <div class="social__media--wrap">
             <div class="footer__logo">
-                <a href="/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             </div>
             <p class="website__rights"> © JTRi Racing 2024. All rights reserved </p>
             <div class="social__icons">
