--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+            <a href="https://johnreed25.github.io/JTRiRacing/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -18,22 +18,22 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/" class="navbar__links">
                         Home
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/services.html" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/services.html" class="navbar__links">
                         Coaching Services
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/about.html" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/about.html" class="navbar__links">
                         About
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/signup.html" class="button">
+                    <a href="https://johnreed25.github.io/JTRiRacing/signup.html" class="button">
                         Sign Up
                     </a>
                 </li>
@@ -53,7 +53,7 @@
                 <p>John has always had a desire to coach and share his knowledge with athletes of all ages and abilities. John's engineering mindset brings a scientific and analytic approach to training, which combined with his background as a collegiate and professional athlete provides his athletes to have all the tools for success in endurance sport.</p>
                 <p>He is happy to coach athletes of any age and ability. Whether your goal is finishing your first sprint triathlon, or qualifying for the Boston marathon, or earning your pro license, or standing on the podium of a national championship, the first step is having consistency and accountability in training.</p>
                 <p>Get started today by filling out the new athlete questionnaire or reaching out to John directly.</p>
-                <button class="main__btn"><a href="/signup.html">Get Started</a></button>
+                <button class="main__btn"><a href="https://johnreed25.github.io/JTRiRacing/signup.html">Get Started</a></button>
             </div>
             <div class="main__img--container">
                 <img src="images/SouthTableCrit.JPEG" alt="pic" id="main__img">
@@ -67,15 +67,15 @@
         <div class="footer__link--wrapper">
             <div class="footer__link--items">
                 <h2>About Us</h2>
-                <a href="/services.html">Services and Prices</a>
-                <a href="/about.html">Coach Bio</a>
-                <a href="/">Terms of Service</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/services.html">Services and Prices</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/about.html">Coach Bio</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/">Terms of Service</a>
             </div>
             <div class="footer__link--items">
                 <h2>Contact Us</h2>
-                <a href="/signup.html">Contact</a>
-                <a href="/signup.html">Support</a>
-                <a href="/signup.html">Sponsorships</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Contact</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Support</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Sponsorships</a>
             </div>
 
         </div>
@@ -101,7 +101,7 @@
     <div class="social__media">
         <div class="social__media--wrap">
             <div class="footer__logo">
-                <a href="/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             </div>
             <p class="website__rights"> © JTRi Racing 2024. All rights reserved </p>
             <div class="social__icons">
