--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+            <a href="https://johnreed25.github.io/JTRiRacing/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -19,22 +19,22 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/" class="navbar__links">
                         Home
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/services.html" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/services.html" class="navbar__links">
                         Coaching Services
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/about.html" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/about.html" class="navbar__links">
                         About
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/signup.html" class="button">
+                    <a href="https://johnreed25.github.io/JTRiRacing/signup.html" class="button">
                         Sign Up
                     </a>
                 </li>
@@ -73,7 +73,7 @@
             <div class="card-price">
                 <p class="price monthly-price">$200/mo</p>
                 <p class="price yearly-price hidden">$160/mo</p>
-                <a href="/signup.html" class="price-btn">Get Started</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html" class="price-btn">Get Started</a>
                 <p id="small-desc"> Everything you need to get started</p>
             </div>
 
@@ -97,7 +97,7 @@
             <div class="card-price">
                 <p class="price monthly-price">$250/mo</p>
                 <p class="price yearly-price hidden">$200/mo</p>
-                <a href="/signup.html" class="price-btn">Get Started</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html" class="price-btn">Get Started</a>
                 <p id="small-desc"> Ideal for competitive athletes</p>
             </div>
 
@@ -122,7 +122,7 @@
             <div class="card-price">
                 <p class="price monthly-price">$150/mo</p>
                 <p class="price yearly-price hidden">$120/mo</p>
-                <a href="/signup.html" class="price-btn">Get Started</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html" class="price-btn">Get Started</a>
                 <p id="small-desc">For athletes looking for single sport coaching</p>
             </div>
 
@@ -147,7 +147,7 @@
             <div class="card-price">
                 <p class="price monthly-price">TBD</p>
                 <p class="price yearly-price hidden">TBD</p>
-                <a href="/signup.html" class="price-btn">Get Started</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html" class="price-btn">Get Started</a>
                 <p id="small-desc"> For draft legal triathletes, aspiring professionals, and proffessional triathletes</p>
             </div>
 
@@ -178,15 +178,15 @@
         <div class="footer__link--wrapper">
             <div class="footer__link--items">
                 <h2>About Us</h2>
-                <a href="/services.html">Services and Prices</a>
-                <a href="/about.html">Coach Bio</a>
-                <a href="/">Terms of Service</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/services.html">Services and Prices</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/about.html">Coach Bio</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/">Terms of Service</a>
             </div>
             <div class="footer__link--items">
                 <h2>Contact Us</h2>
-                <a href="/signup.html">Contact</a>
-                <a href="/signup.html">Support</a>
-                <a href="/signup.html">Sponsorships</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Contact</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Support</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Sponsorships</a>
             </div>
 
         </div>
@@ -194,9 +194,9 @@
         <div class="footer__link--wrapper">
             <!-- <div class="footer__link--items">
                 <h2>Contact Us</h2>
-                <a href="/signup.html">Contact</a>
-                <a href="/signup.html">Support</a>
-                <a href="/signup.html">Sponsorships</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Contact</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Support</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Sponsorships</a>
             </div> -->
             
             <div class="footer__link--items">
@@ -212,7 +212,7 @@
     <div class="social__media">
         <div class="social__media--wrap">
             <div class="footer__logo">
-                <a href="/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             </div>
             <p class="website__rights"> © JTRi Racing 2024. All rights reserved </p>
             <div class="social__icons">
