--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+            <a href="https://johnreed25.github.io/JTRiRacing/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -18,22 +18,22 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/" class="navbar__links">
                         Home
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/services.html" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/services.html" class="navbar__links">
                         Coaching Services
                     </a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/about.html" class="navbar__links">
+                    <a href="https://johnreed25.github.io/JTRiRacing/about.html" class="navbar__links">
                         About
                     </a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/signup.html" class="button">
+                    <a href="https://johnreed25.github.io/JTRiRacing/signup.html" class="button">
                         Sign Up
                     </a>
                 </li>
@@ -79,15 +79,15 @@
         <div class="footer__link--wrapper">
             <div class="footer__link--items">
                 <h2>About Us</h2>
-                <a href="/services.html">Services and Prices</a>
-                <a href="/about.html">Coach Bio</a>
-                <a href="/">Terms of Service</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/services.html">Services and Prices</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/about.html">Coach Bio</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/">Terms of Service</a>
             </div>
             <div class="footer__link--items">
                 <h2>Contact Us</h2>
-                <a href="/signup.html">Contact</a>
-                <a href="/signup.html">Support</a>
-                <a href="/signup.html">Sponsorships</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Contact</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Support</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Sponsorships</a>
             </div>
 
         </div>
@@ -95,9 +95,9 @@
         <div class="footer__link--wrapper">
             <!-- <div class="footer__link--items">
                 <h2>Contact Us</h2>
-                <a href="/signup.html">Contact</a>
-                <a href="/signup.html">Support</a>
-                <a href="/signup.html">Sponsorships</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Contact</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Support</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/signup.html">Sponsorships</a>
             </div> -->
             
             <div class="footer__link--items">
@@ -113,7 +113,7 @@
     <div class="social__media">
         <div class="social__media--wrap">
             <div class="footer__logo">
-                <a href="/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             </div>
             <p class="website__rights"> © JTRi Racing 2024. All rights reserved </p>
             <div class="social__icons">
