--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="https://johnreed25.github.io/JTRiRacing/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+            <a href="https://johnreed25.github.io/JTRiRacing/index.html" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -51,7 +51,7 @@
                 <h1>USAT LEVEL 1 CERTIFIED COACH</h1>
                 <h2>Coaching and customized training plans for endurance athletes</h2>
                 <p>Maximize your swim, bike, and run training.</p>
-                <button class="main__btn"><a href="/services.html">Get Started</a></button>
+                <button class="main__btn"><a href="https://johnreed25.github.io/JTRiRacing/services.html">Get Started</a></button>
             </div>
             <div class="main__img--container">
                 <img src="images/oceanswim.jpg" alt="pic" id="main__img">
@@ -66,12 +66,12 @@
             <div class="services__card">
                 <h2>Train Smarter, Race Faster</h2>
                 <p>Individually tailored training plans</p>
-                <button class="main__btn"><a href="/services.html">Get Started</a></button>
+                <button class="main__btn"><a href="https://johnreed25.github.io/JTRiRacing/services.html">Get Started</a></button>
             </div>
             <div class="services__card">
                 <h2>Are you Ready?</h2>
                 <p>Fill out the new athlete questionnaire</p>
-                <button class="main__btn"><a href="/signup.html">Get Started</a></button>
+                <button class="main__btn"><a href="https://johnreed25.github.io/JTRiRacing/signup.html">Get Started</a></button>
             </div>
         </div>
     </div>
@@ -85,7 +85,7 @@
                 <h2>About Us</h2>
                 <a href="https://johnreed25.github.io/JTRiRacing/services.html">Services and Prices</a>
                 <a href="https://johnreed25.github.io/JTRiRacing/about.html">Coach Bio</a>
-                <a href="https://johnreed25.github.io/JTRiRacing/">Terms of Service</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/index.html">Terms of Service</a>
             </div>
             <div class="footer__link--items">
                 <h2>Contact Us</h2>
@@ -117,7 +117,7 @@
     <div class="social__media">
         <div class="social__media--wrap">
             <div class="footer__logo">
-                <a href="https://johnreed25.github.io/JTRiRacing/" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+                <a href="https://johnreed25.github.io/JTRiRacing/index.html" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             </div>
             <p class="website__rights"> © JTRi Racing 2024. All rights reserved </p>
             <div class="social__icons">
