--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="https://johnreed25.github.io/JTRiRacing/about.html" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
+            <a href="https://johnreed25.github.io/JTRiRacing/" id="navbar__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
