--- a/about.html
+++ b/about.html
@@ -56,11 +56,18 @@
                 <p>Get started today by filling out the new athlete questionnaire or reaching out to John directly.</p>
                 <button class="main__btn"><a href="https://johnreed25.github.io/JTRiRacing/signup.html">Get Started</a></button>
             </div>
+            </div>
+    </div>
+    
+    <!-- Picture Section -->
+        <div class="main">
+        <div class="main__container">
             <div class="main__img--container">
                 <img src="images/SouthTableCrit.JPEG" alt="pic" id="main__img">
             </div>
         </div>
     </div>
+    
 <!-- Footer Section -->
 
 <div class="footer__container">
