--- a/about.html
+++ b/about.html
@@ -60,8 +60,8 @@
     </div>
     
     <!-- Picture Section -->
-        <div class="main">
-        <div class="main__container">
+    <div class="picture">
+        <div class="picture__container">
             <div class="main__img--container">
                 <img src="images/SouthTableCrit.JPEG" alt="pic" id="main__img">
             </div>
