--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 <p>John raced his first triathlon at the North Park kids triathlon at six years old and fell in love with the sport ever since. He competed in triathlons every summer throughout middle school, high school, and college.</p>
                 <p>John was a high school swimmer with personal bests of 5:11 in the 500 yd free and 1:55 in the 200 yd free. He also competed in cross country and track at the collegiate level for RPI with personal bests of 4:15 in the mile, 14:16 in the 5km, 30:07 in the 10km, and 2:39:03 in the marathon while graduating with a master's degree in Electrical Engineering.</p>
                 <p>John eventually earned his professional triathlete license and primarily races the half ironman distance with a personal best of 3:54:41 at Ironman 70.3 Eagleman in 2022.</p>
-                <p>John has always had a desire to coach and share his knowledge with athletes of all ages and abilities. John's engineering mindset brings a scientific and analytic approach to training, which combined with his background as a collegiate and professional athlete provides his athletes to have all the tools for success in endurance sport.</p>
+                <p>John has always had a desire to coach and share his knowledge with athletes of all ages and abilities. John's engineering mindset brings a scientific and analytic approach to training, which combined with his background as a collegiate and professional athlete provides his athletes with all the tools for success in endurance sport.</p>
                 <button class="main__btn"><a href="https://johnreed25.github.io/JTRiRacing/signup.html">Get Started</a></button>
             </div>
             <div class="main__img--container">
