--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JTRi Racing Website</title>
+    <title>JTRi Racing | Triathlon Coaching</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/2e58bb4132.js" crossorigin="anonymous"></script>
     <!--<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -119,7 +119,7 @@
             <div class="footer__logo">
                 <a href="https://johnreed25.github.io/JTRiRacing/index.html" id="footer__logo"> <i class="fas fa-person-biking"></i>JTRi Racing</a>
             </div>
-            <p class="website__rights"> © JTRi Racing 2024. All rights reserved </p>
+            <p class="website__rights"> © JTRi Racing 2025. All rights reserved </p>
             <div class="social__icons">
                 <a href="https://www.facebook.com/profile.php?id=100009187888857" class="social__icon--link" target="_blank">
                     <i class="fab fa-facebook"></i>
@@ -146,3 +146,4 @@
     
 </body>
 </html>
+
